idf_component_register(
        SRCS 
            "i2c_tools_web_server.c" 
            "i2c_tools.c" 
            "i2c_tools_wifi_connect.c" 
            "i2c_tools_cmd.c" 
        INCLUDE_DIRS 
            "."
        EMBED_FILES
            "i2c_tools_html.html"
        REQUIRES
            logic_analyzer
            esp_http_server
            driver
            esp_wifi
            nvs_flash
)
